--- a/public/theme/quest/block/content.twig
+++ b/public/theme/quest/block/content.twig
@@ -4,13 +4,13 @@
 			<div class="row">
 				<div id="primary" class="content-area single col-md-9">
 					<div id="main" class="site-main" role="main">
-						{% include "blog/blog.html" %}
-            			{% include "block/comments.html" %}
+						{% include "blog/blog.twig" %}
+            			{% include "block/comments.twig" %}
 					</div>
 					<!-- #main -->
 				</div>
 				<!-- #primary -->
-				{% include "block/secondary.html" %}
+				{% include "block/secondary.twig" %}
 			</div>
 			<!-- .row -->
 		</div>
